# hear-sound

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
docs/: terminologies.md
src/: arguments.py  dft_pitch.py  feature_extraction.py  keyword.py  librosa_feature.py  main.py  midi.py  pitch_detection.py  praat.py  pyaudio_stream.py
