[tool.poetry]
name = "hearsound"
version = "0.1.0"
description = ""
authors = ["enpuyou <youe2@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
pyaudio = "^0.2.11"
librosa = "^0.8.0"
matplotlib = "^3.3.3"
praat-parselmouth = "^0.3.3"
deepspeech = "^0.9.3"
audio-to-midi = "^2020.7"
isobar = "^0.1.1"
python-rtmidi = "^1.4.6"
mido = "^1.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
